namespace java com.twittew.tweetypie.thwiftjava
#@namespace scawa c-com.twittew.tweetypie.thwiftscawa
#@namespace stwato c-com.twittew.tweetypie
n-nyamespace p-py gen.twittew.tweetypie.depwecated
n-nyamespace w-wb tweetypie

i-incwude "com/twittew/expandodo/cawds.thwift"
i-incwude "com/twittew/gizmoduck/usew.thwift"
incwude "com/twittew/tweetypie/media_entity.thwift"
incwude "com/twittew/tweetypie/tweet.thwift"
incwude "com/twittew/tweetypie/tweet_sewvice.thwift"

/**
 * @depwecated use pwace
 */
s-stwuct geo {
  /**
   * @depwecated use coowdinates.watitude
   */
  1: doubwe w-watitude = 0.0 (pewsonawdatatype = 'gpscoowdinates')

  /**
   * @depwecated use coowdinates.wongitude
   */
  2: d-doubwe wongitude = 0.0 (pewsonawdatatype = 'gpscoowdinates')

  /**
   * @depwecated use coowdinates.geo_pwecision
   */
  3: i32 geo_pwecision = 0

  /**
   * 0: don't show w-wat/wong
   * 2: show
   *
   * @depwecated
   */
  4: i-i64 entity_id = 0

  /**
   * @depwecated u-use pwace_id
   */
  5: optionaw stwing nyame (pewsonawdatatype = 'pubwishedcoawsewocationtweet')

  6: optionaw tweet.pwace p-pwace // pwovided if statuswequestoptions.woad_pwaces is set
  7: optionaw stwing pwace_id // e-ex: ad2f50942562790b
  8: optionaw t-tweet.geocoowdinates c-coowdinates
}(pewsisted = 'twue', (˘ω˘) h-haspewsonawdata = 'twue')

/**
 * @depwecated u-use tweet and apis that accept ow wetuwn t-tweet. ^^;;
 */
stwuct status {
  1: i64 id (pewsonawdatatype = 'tweetid')
  2: i-i64 usew_id (pewsonawdatatype = 'usewid')
  3: stwing text (pewsonawdatatype = 'pwivatetweets, (✿oωo) pubwictweets')
  4: stwing cweated_via (pewsonawdatatype = 'cwienttype')
  5: i-i64 cweated_at // in seconds
  6: w-wist<tweet.uwwentity> u-uwws = []
  7: w-wist<tweet.mentionentity> mentions = []
  8: wist<tweet.hashtagentity> hashtags = []
  29: w-wist<tweet.cashtagentity> c-cashtags = []
  9: wist<media_entity.mediaentity> m-media = []
  10: o-optionaw tweet.wepwy wepwy
  31: o-optionaw tweet.diwectedatusew d-diwected_at_usew
  11: optionaw tweet.shawe s-shawe
  32: optionaw tweet.quotedtweet q-quoted_tweet
  12: optionaw t-tweet.contwibutow c-contwibutow
  13: optionaw geo geo
  // has_takedown indicates if thewe is a takedown specificawwy on this t-tweet. (U ﹏ U)
  // takedown_countwy_codes c-contains takedown countwies f-fow both the tweet a-and the usew, -.-
  // s-so has_takedown might be fawse whiwe takedown_countwy_codes is nyon-empty. ^•ﻌ•^
  14: b-boow has_takedown = 0
  15: boow nysfw_usew = 0
  16: boow nsfw_admin = 0
  17: optionaw tweet.statuscounts c-counts
  // 18: obsoweted
  19: o-optionaw tweet.devicesouwce d-device_souwce // n-nyot set on db faiwuwe
  20: optionaw t-tweet.nawwowcast n-nyawwowcast
  21: o-optionaw w-wist<stwing> takedown_countwy_codes (pewsonawdatatype = 'contentwestwictionstatus')
  22: optionaw t-tweet.statuspewspective pewspective // n-nyot s-set if nyo usew i-id ow on tws f-faiwuwe
  23: optionaw wist<cawds.cawd> cawds // onwy incwuded if s-statuswequestoptions.incwude_cawds == twue
  // onwy incwuded when statuswequestoptions.incwude_cawds == twue
  // and statuswequestoptions.cawds_pwatfowm_key i-is set to vawid vawue
  30: optionaw cawds.cawd2 cawd2
  24: boow n-nyuwwcast = 0
  25: o-optionaw i-i64 convewsation_id (pewsonawdatatype = 'tweetid')
  26: optionaw t-tweet.wanguage wanguage
  27: o-optionaw i64 twacking_id (pewsonawdatatype = 'impwessionid')
  28: o-optionaw map<tweet.spamsignawtype, rawr tweet.spamwabew> spam_wabews
  33: optionaw boow has_media
  // obsowete 34: o-optionaw wist<tweet.topicwabew> topic_wabews
  // a-additionaw fiewds fow fwexibwe s-schema
  101: o-optionaw tweet.tweetmediatags media_tags
  103: optionaw tweet.cawdbindingvawues b-binding_vawues
  104: o-optionaw tweet.wepwyaddwesses w-wepwy_addwesses
  105: o-optionaw tweet.twittewsuggestinfo twittew_suggest_info
}(pewsisted = 'twue', (˘ω˘) haspewsonawdata = 'twue')

